--- a/index.html
+++ b/index.html
@@ -2,26 +2,29 @@
 <html>
 <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
 	<title>RMF ON</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="prefetch" type="application/l10n" href="l10n/locales.ini" />    
 </head>
 <body>
     <div class="title">
         <h1>RMF ON</h1>
-        <h3>NAJLEPSZA MUZYKA</h3>
+        <h3 data-l10n-id="subtitle">NAJLEPSZA MUZYKA</h3>
     </div>
     <div id="player">
         <div id="audio_content">
             <audio id="yourAudio" preload='none'>
               <source src="http://217.74.72.11:8000/rmf_fm" type="audio/ogg">
             </audio>
-            <a href="#" id="audioControl"><img id="img" src="play.svg"/></a>
+            <a href="#" id="audioControl"><img id="img" src="img/play.svg"/></a>
         </div>
         <div id="volume_content">            
             <input type="range" min="0.0" max="1.0" value="0.5" id="fader" step="0.1" onchange="outputUpdate(value)">
             <output for="fader" id="volume">50%</output>
         </div>
     </div>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="js/l10n.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
